adding twitter stuff

--- a/gadget/plusone.html
+++ b/gadget/plusone.html
@@ -4,6 +4,8 @@
     </script>
   </head>
   <body>
-      <g:plusone href="http://androidannotations.googlecode.com"></g:plusone>
+    <g:plusone href="http://androidannotations.googlecode.com"></g:plusone>
+    <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://androidannotations.googlecode.com" data-text="Simple and powerful #Android code with @AndAnnotations !" data-count="horizontal" data-via="@AndAnnotations">Tweet</a>
+    <script type="text/javascript" src="http://platform.twitter.com/widgets.js" />
   </body>
 </html>
