update tweet url

--- a/gadget/plusone.html
+++ b/gadget/plusone.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <g:plusone href="http://androidannotations.googlecode.com"></g:plusone>
-    <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://androidannotations.googlecode.com" data-text="Simple and powerful #Android code with #AndroidAnnotations !" data-count="horizontal" data-via="AndAnnotations" data-related="pyricau:Project owner">Tweet</a>
+    <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://code.google.com/p/androidannotations" data-text="Simple and powerful #Android code with #AndroidAnnotations !" data-count="horizontal" data-via="AndAnnotations" data-related="pyricau:Project owner">Tweet</a>
     <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
   </body>
 </html>
